Fix sidebar not collapsing

--- a/src/app/components/side-nav/side-nav.component.sass
+++ b/src/app/components/side-nav/side-nav.component.sass
@@ -6,22 +6,6 @@
   padding: 12px 4px 12px 4px
   background-color: $black
 
-.link
-  width: 100%
-  height: 40px
-  padding: 0 8px 0 8px
-  border-radius: 5px
-  display: flex
-  align-items: center
-  cursor: pointer
-  margin-top: 8px
-  text-decoration: none
-  color: white
-
-  &:hover
-    border: 2px solid $white
-    background-color: $dark-gray
-
 .label
   margin-left: 4px
 
